...
    private let pokemonNameLabel: UILabel = {
        let label = UILabel()
        label.translatesAutoresizingMaskIntoConstraints = false
        label.textAlignment = .center
        label.font = .poppinsMedium(size: 16)
        label.textColor = .label
        label.accessibilityIdentifier = "pokemonNameCellLabel"
        return label
    }()
    
    private let containerImage: UIView = {
        let view = UIView()
        view.translatesAutoresizingMaskIntoConstraints = false
...
