//
//  PokepediaUITests.swift
//  PokepediaUITests
//
//  Created by Rivaldo Fernandes on 30/08/23.
//

import XCTest

final class PokepediaUITests: XCTestCase {
    
    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        
        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }
    
    func testFavorite() {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()
        
        let pokeCollection = app.collectionViews.firstMatch
        let firstPoke = pokeCollection.cells.firstMatch
        let firstPokeTitle = firstPoke.staticTexts["pokemonNameCellLabel"].label
        firstPoke.tap()
        
        XCTAssert(app.staticTexts[firstPokeTitle].exists)
        
        let favoriteButton = app.navigationBars.buttons["favoriteButton"]
        favoriteButton.tap()
        
        let favoriteAlert = app.alerts["favoriteAlert"]
        let alertOkButton = favoriteAlert.buttons["okButton"]
        alertOkButton.tap()
        
        let backButton = app.navigationBars.buttons.firstMatch
        backButton.tap()
        
        let tabBarFavorite = app.tabBars.buttons["Favorite"]
        tabBarFavorite.tap()
        
        XCTAssert(app.staticTexts[firstPokeTitle].exists)
        
        
        let pokeFavTable = app.tables.firstMatch
        let firstPokeFav = pokeFavTable.cells.firstMatch
        firstPokeFav.tap()
        
        app.navigationBars.buttons["favoriteButton"].tap()
        
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }
    
    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, watchOS 7.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
}
